exports[`App snapshots 1`] = `
<div
  className="page">
  <div
    className="interactions">
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        type="text"
        value="redux" />
      <button
        type="submit">
        Search
      </button>
    </form>
  </div>
  <div
    className="table" />
  <div
    className="interactions">
    <button
      onClick={[Function]}
      type="button">
      More
    </button>
  </div>
</div>
`;

exports[`Button snapshots 1`] = `
<button
  onClick={undefined}
  type="button">
  Give me more
</button>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={undefined}>
  <input
    onChange={undefined}
    type="text"
    value={undefined} />
  <button
    type="submit">
    Search
  </button>
</form>
`;

exports[`Table snapshots 1`] = `
<div
  className="table">
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}
        target="_blank">
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      2
    </span>
  </div>
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}
        target="_blank">
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      2
    </span>
  </div>
</div>
`;
